--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,7 @@
     box-sizing: border-box;
 }
 
+
 body{
     background-color: hsl(233, 47%, 7%);
     display: flex;
@@ -21,7 +22,7 @@ main{
     overflow: hidden;
 }
 
-.image img{
+.mobile{
     width: 100%;
 }
 
@@ -57,6 +58,8 @@ h1 span{
 
 .content>p{
     color:  hsla(0, 0%, 100%, 0.75);
+    margin-top: 25px;
+    line-height: 1.6;
 }
 
 .status{
@@ -79,4 +82,44 @@ h1 span{
     text-transform: uppercase;
     font-size: 0.8em;
     font-family: 'lexend deca';
+}
+
+
+@media (min-width:1185px){
+    body{
+        height: 100vh;
+    }
+    
+    
+    main{
+        text-align: start;
+        margin: auto;
+        width: 1110px;
+        height: 445px;
+        display: flex;
+        flex-direction: row-reverse;
+    }
+    
+    .mobile{
+        display: none;
+    }
+
+    .desktop{
+        height: 100%;
+        display: inline;
+    }
+    
+    .content{
+        padding: 70px;
+    }
+    
+    .status{
+        flex-direction: row;
+        margin-top: 65px;
+        position: absolute;
+    }
+    
+    .stat{
+        margin-right: 90px;
+    }
 }
